--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <!-- http://www.nabble.com/Loading-Dojo-in-the-Background-!-td4501857.html -->
-<html>
 	<head>
 		<title>pastiche</title>
 	</head>
