--- a/trunk/static/index.html
+++ b/trunk/static/index.html
@@ -17,11 +17,30 @@
 				<a href="/dada/">dada</a>
 			</li>
 		</ul>
+		
 		<hr size="1"/>
-		<p align="center">
-			<a href="http://www.dojotoolkit.org/"><img src="/static/images/dojo.png" border="0" align="middle" alt="powered by dojo" title="powered by dojo" /></a>
-			<a href="http://www.djangoproject.com/"><img src="http://media.djangoproject.com/img/badges/djangomade124x25.gif" border="0" align="middle" alt="made with django" title= "made with django" /></a>
-			<a href="http://www.webfaction.com?affiliate=andre"><img src="/static/images/105x22-hosted.png" border="0" align="middle" alt="hosted by webfaction" title="hosted by webfaction" /></a>
-		</p>
+		
+		<table align="center" style="border: 0; cellpadding: 0; cellspacing: 0" summary="badges">
+			<tr>
+				<td>
+					<a target="_blank" href="http://www.dojotoolkit.org/"><img src="/static/images/dojo_toolkit.png" border="0" align="middle" alt="powered by dojo" title="powered by dojo" /></a>
+				</td>
+				<td>
+					<a target="_blank" href="http://www.djangoproject.com/"><img src="http://media.djangoproject.com/img/badges/djangomade124x25.gif" border="0" align="middle" alt="made with django" title= "made with django" /></a>
+				</td>
+				<td>
+					<a target="_blank" href="http://www.webfaction.com?affiliate=andre"><img src="/static/images/105x22-hosted.png" border="0" align="middle" alt="hosted by webfaction" title="hosted by webfaction" /></a>
+				</td>
+			</tr>
+			<tr>
+				<td>
+				</td>
+				<td>
+					<a href="http://www.djangoproject.com/foundation/donate/"><img src="http://media.djangoproject.com/img/badges/djangodonated126x54_grey.png" border="0" alt="I donated to Django" width="126" height="54" /></a>
+				</td>
+				<td>
+				</td>
+			</tr>
+		</table>
 	</body>
 </html>
